[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/Skeleton.gd" type="Script" id=1]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/idle/hit-0.png" type="Texture" id=2]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/idle/hit-1.png" type="Texture" id=3]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/idle/hit-2.png" type="Texture" id=4]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/idle/hit-3.png" type="Texture" id=5]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/idle/hit-4.png" type="Texture" id=6]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/idle/hit-5.png" type="Texture" id=7]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/walk/walk-0.png" type="Texture" id=8]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/walk/walk-1.png" type="Texture" id=9]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/walk/walk-2.png" type="Texture" id=10]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/walk/walk-3.png" type="Texture" id=11]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/walk/walk-4.png" type="Texture" id=12]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/walk/walk-5.png" type="Texture" id=13]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/walk/walk-6.png" type="Texture" id=14]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/walk/walk-7.png" type="Texture" id=15]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/walk/walk-8.png" type="Texture" id=16]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/walk/walk-9.png" type="Texture" id=17]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/walk/walk-10.png" type="Texture" id=18]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/walk/walk-11.png" type="Texture" id=19]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/run/run-0.png" type="Texture" id=20]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/run/run-1.png" type="Texture" id=21]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/run/run-2.png" type="Texture" id=22]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/run/run-3.png" type="Texture" id=23]
[ext_resource path="res://Images/hell_dog/Hell-Hound-Files/PNG/run/run-4.png" type="Texture" id=24]
[ext_resource path="res://Items/sword.tscn" type="PackedScene" id=25]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": false,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "Walk_Angry",
"speed": 1.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "Attack",
"speed": 15.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "React",
"speed": 1.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 7.71779, 14.9322 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 70.4356, 27.5811 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 5.08258, 13.351 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Skeleton" type="KinematicBody2D" groups=[
"Enemies",
]]

input_pickable = true
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Pickable", "Transform" ]
__meta__ = {
"_edit_horizontal_guides_": [ 17.5132 ]
}

[node name="Animation" type="AnimatedSprite" parent="." index="0"]

editor/display_folded = true
frames = SubResource( 1 )
animation = "Attack"
_sections_unfolded = [ "Transform" ]

[node name="AttackeZone" type="Area2D" parent="Animation" index="0"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Animation/AttackeZone" index="0"]

position = Vector2( 10.1897, 1.42951 )
shape = SubResource( 2 )

[node name="AreaDeVision" type="Area2D" parent="Animation" index="1"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Animation/AreaDeVision" index="0"]

visible = false
position = Vector2( 64.0326, -3.91496 )
scale = Vector2( 1, 0.794428 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
position = Vector2( -4.74336, 4.21632 )
shape = SubResource( 4 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="hitbox" type="Area2D" parent="." index="3"]

visible = false
position = Vector2( -4.23807, 3.76991 )
scale = Vector2( 0.264615, 0.428859 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox" index="0"]

visible = false
position = Vector2( -4.74014, 0.616942 )
scale = Vector2( 2.8377, 3.14768 )
shape = SubResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="." index="4"]

position = Vector2( 7.26398, 9.98873 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="halberd" parent="." index="5" instance=ExtResource( 25 )]

position = Vector2( 8.79656, 9.40422 )
rotation = 0.0
scale = Vector2( 1.6, 1.6 )

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]

[connection signal="body_entered" from="Animation/AttackeZone" to="." method="_on_AttackeZone_body_entered"]

[connection signal="body_exited" from="Animation/AttackeZone" to="." method="_on_AttackeZone_body_exited"]

[connection signal="body_entered" from="Animation/AreaDeVision" to="." method="_on_AreaDeVision_body_entered"]

[connection signal="body_exited" from="Animation/AreaDeVision" to="." method="_on_AreaDeVision_body_exited"]

[connection signal="timeout" from="timer" to="." method="_on_Timer_timeout"]

[connection signal="body_entered" from="hitbox" to="." method="_on_Area2D_body_entered"]


